<resources>
    <string name="app_name">Kross Passenger</string>
    <string name="passagerApiKey">==ylSgXYOL4bZ+v|GVTu$atuqlg2Gp$ZNeQ#*KpN</string>
    <string name="facebook_app_id" translatable="false">175479899966468</string>
    <string name="facebook_app_client_token" translatable="false">d0b45fc41e24551c51ff0af333ab7ee0</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb175479899966468</string>
    <string name="socket_url">https://notification-dev.kross.taxi/</string>
    <string name="CONTENT_TYPE" translatable="false">application/json</string>
    <string name="CACHE_CONNTROL" translatable="false">no-cache</string>
    <string name="POSTMAN_TOKEN" translatable="false">c83597e6-4130-41bf-aef3-016d8b5814f2</string>
    <string name="preference_file" translatable="false">kross_passanger</string>
    <string name="onboarding_passed_key" translatable="false">onboarding_passed</string>
    <string name="token" translatable="false">token</string>
    <string name="user_id" translatable="false">user id</string>
    <string name="API_KEY" translatable="false">api key</string>
    <string name="PUSH_TOKEN" translatable="false">push token</string>
    <string name="txt_error_number_not_match">The phone number does not match</string>
    <string name="txt_error_no_connection">No internet connection</string>
    <string name="txt_error_code_registr">404</string>
    <string name="txt_error_message_number_not_match">The phone number does not match</string>
    <string name="txt_error_phone_number_alredy_exist">User with this email already exist</string>
    <string name="txt_error_user_not_found">User not found</string>
    <string name="txt_error_email_alredy_exist">User with this phone number already exist</string>
    <string name="txt_error_message_license_already_exist">User with same license number is already exist</string>
    <string name="txt_error_message_not_a_car_owner">You must be a car owner</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="validator_error_txt_shot_custom_hint">Password must be at least 6 characters</string>
    <string name="validator_error_txt_shot">Number is short</string>
    <string name="validator_error_txt_shot_field">Field is short</string>
    <string name="validator_error_txt_long">Number is long</string>
    <string name="validator_error_txt_withoutDot">Field not contains dot</string>
    <string name="validator_error_txt_withoutAtSymbol">withoutAtSymbol</string>
    <string name="validator_error_txt_notOnlyLatin">Field has non-latin symbols</string>
    <string name="validator_error_txt_isEmpty">Field is empty</string>
    <string name="validator_error_txt_containsSpace">Field contains space</string>
    <string name="validator_error_txt_incorrect">Invalid e-mail</string>
    <string name="validator_error_txt_notOnlyDigits">Field contains not only digits</string>
    <string name="validator_error_txt_notFitCustomRegex">Field not fit custom regex</string>
    <string name="txt_registration_step_account_name_validation">Account name must contains two word</string>
    <string name="txt_registration_third_validation_error">Number must contain 9 symbols</string>
    <string name="title_onboarding_first">Comfy trips</string>
    <string name="title_onboarding_second">Opportunities for car owners</string>
    <string name="title_onboarding_third">Bonus system</string>
    <string name="description_onboarding_first">Choose your level of comfort,\n driver\'s rating and payment method\n that is the best for you</string>
    <string name="description_onboarding_second">Make money on your car. Rent out your vehicle, choose a driver in our system and track all activity and ride orders</string>
    <string name="description_onboarding_third">Pay with bonuses for your trip.\n The more people you invite with the\n referral link, hte more bonuses you get</string>
    <string name="txt_onboarding_skip">SKIP</string>
    <string name="txt_button_next">NEXT</string>
    <string name="txt_auth_screen_error_message">Internal Server Error. Please try later</string>
    <string name="txt_authorization_toolbar_title">Authorization</string>
    <string name="txt_auth_screen_enter_your_password">Enter your password</string>
    <string name="txt_auth_screen_hint_enter_password">Enter password</string>
    <string name="txt_auth_screen_label_authorization">Authorization</string>
    <string name="txt_auth_screen_forgot_the_password">Forgot the password?</string>
    <string name="txt_auth_screen_dialog_title">Password recovery</string>
    <string name="txt_auth_screen_dialog_message">An letter was send on your e-mail. Please check your inbox and follow the directions.</string>
    <string name="txt_auth_screen_dialog_pos_btn">OK</string>
    <string name="txt_auth_screen_wrong_password">Wrong password</string>
    <string name="KEY_INTENT_AUTHORIZATION">authorization</string>
    <string name="error_message_user_not_found">User with this phone number not found.</string>
    <string name="txt_registration_toolbar_title">Registration</string>
    <string name="KEY_INTENT_REGISTRATION_PHONE">registration phone</string>
    <string name="KEY_INTENT_REGISTRATION_TOKEN">registration token</string>
    <string name="txt_registration_hint_first_name">First name *</string>
    <string name="txt_registration_hint_last_name">Last name *</string>
    <string name="txt_registration_hint_email">E-mail *</string>
    <string name="txt_registration_hint_code">Invite code (optional)</string>
    <string name="txt_registration_invalid_email">Invalid e-mail</string>
    <string name="txt_registration_hint_create_password">Create a password</string>
    <string name="txt_registration_hint_valid_password">Minimum 6 characters</string>
    <string name="txt_registration_button">FINISH</string>
    <string name="txt_add_cars_screen_toolbar_title">Add a card</string>
    <string name="txt_add_card_screen_title">To make your payments easier and faster please add your card</string>
    <string name="txt_add_card_screen_name">Card`s name (optional)</string>
    <string name="txt_add_card_screen_number">Number</string>
    <string name="txt_add_card_screen_date">Expiration date</string>
    <string name="txt_add_card_cvv">CVV2/CVC2</string>
    <string name="txt_add_card_name_hint">Name</string>
    <string name="txt_add_card_number_hint">xxxx\u0020\u0020\u0020xxxx\u0020\u0020\u0020xxxx\u0020\u0020\u0020xxxx</string>
    <string name="txt_add_car_date_hint">xx/xx</string>
    <string name="txt_add_card_cvv_hint">xxx</string>
    <string name="txt_cabinet_screen_toolbar_title">Cabinet</string>
    <string name="txt_tab_cabinet_toolbar_title">Cabinet</string>
    <string name="txt_wallet_card_title">MY WALLET\n</string>
    <string name="txt_wallet_cabinet_subtitle">Pay for trips, withdraw your money to\n your bank account</string>
    <string name="txt_cabinet_payment_methods">Payment methods</string>
    <string name="txt_cabinet_password">Password</string>
    <string name="txt_cabinet_my_trips">My trips</string>
    <string name="txt_cabinet_my_favorite">My favorite</string>
    <string name="txt_cabinet_news">News</string>
    <string name="txt_cabinet_my_referral_link">My referral link</string>
    <string name="txt_cabinet_become_car_owner">Become a car owner</string>
    <string name="txt_cabinet_my_cars">My cars</string>
    <string name="txt_cabinet_about_taxi_africa">About Taxi Africa</string>
    <string name="txt_cabinet_support">Support</string>
    <string name="txt_cabinet_faq">FaQ</string>
    <string name="txt_cabinet_sign_out">SIGN OUT</string>
    <string name="txt_cabinet_sign_out_upper_case">Sign out</string>
    <string name="txt_cabinet_share_message">Share your referral link</string>
    <string name="txt_save">SAVE</string>
    <string name="txt_skip">SKIP</string>
    <string name="txt_bottom_dialog_message">Take a picture</string>
    <string name="txt_bottom_dialog_delete">Delete photo</string>
    <string name="title_car_owner">Become a car owner</string>
    <string name="title_verification">Verification</string>
    <string name="apply_for_verification">APPLY FOR VERIFICATION</string>
    <string name="add_an_insurance">Add an insurance</string>
    <string name="add_a_proof_of_ownership">Add a proof of ownership</string>
    <string name="add_a_car_photo">Add a car photo</string>
    <string name="enter_license_plate_number">Enter license plate number</string>
    <string name="choose_car_model">Choose car model</string>
    <string name="choose_car_make">Choose car make</string>
    <string name="car_information">Car information</string>
    <string name="verify_my_e_mail">VERIFY MY E-MAIL</string>
    <string name="txt_choose_car_make_toolbar_title">Choose a car make</string>
    <string name="txt_choose_car_model_toolbar_title">Choose a car model</string>
    <string name="KEY_INTENT_CARE_MAKE" translatable="false">car make</string>
    <string name="KEY_INTENT_CARE_MAKE_MODEL" translatable="false">car make model</string>
    <string name="txt_choose_car_make_hint_search">Search</string>
    <string name="txt_camera_screen_picture_frame">Make sure the picture fits in the frame and all data is visible</string>
    <string name="txt_camera_screen_car_photo">Make a clear picture of your car that fits in the frame</string>
    <string name="txt_camera_screen_profile_photo">Make sure your face fits in the circle</string>
    <string name="txt_camera_screen_setting_explanation">To take photo, allow permissions to take photos.</string>
    <string name="txt_button_camera_screen_allow_permission">ALLOW TAKING PHOTOS</string>
    <string name="KEY_INTENT_PHOTO_PATH">key intent photo path</string>
    <string name="txt_personal_data_toolbar_title">Personal data</string>
    <string name="txt_edit_personal_data_toolbar_title">Edit personal data</string>
    <string name="txt_hint_verify_email_edit_profile">Your e-mail has been verified.</string>
    <string name="txt_verify_email_personal_data">VERIFY MY E-MAIL</string>
    <string name="txt_number_personal_data">Number</string>
    <string name="txt_save_personal_data">SAVE</string>
    <string name="txt_personal_data_hint_verify_error">Your e-mail hasn`t been verified. Try again.</string>
    <string name="title_dialog_email_verification">E-mail verification</string>
    <string name="message_dialog_email_verification">An email has been sent. Please check your inbox and follow the instructions.</string>
    <string name="txt_error_compare_password">The current password not pass with old password</string>
    <string name="txt_emty_data_personal_data">The some field is empty</string>
    <string name="KEY_INTENT_PHOTO_AAD">oldPathPhoto</string>
    <string name="KEY_INTENT_REQUEST_CODE">requestCode</string>
    <string name="car_insurance_added">Car insurance added</string>
    <string name="SATUS">status</string>
    <string name="add_car">ADD A CAR</string>
    <string name="you_ve_been_verified">You`ve been verified</string>
    <string name="your_personal">Your personal data was verified. Come to our office125 Uke Street take all your car`s registration documents, your driving license and passport.</string>
    <string name="text_become_carowner">Make money on your car. You can rent out you vehicle, choose a driver in our system and track all activity and ride orders</string>
    <string name="txt_transfer_details_title">Enter the amount of bonuses you want to transfer to your bank account:</string>
    <string name="txt_transfer_hint">Enter the amount</string>
    <string name="txt_transfer_converted">%s bonus=%s NGN</string>
    <string name="txt_transfer_left">Amount left: ₦%s</string>
    <string name="txt_transfer_error">There are unsufficient bonuses to transfer</string>
    <string name="txt_transfer_button_title">WITHDRAW THE BONUSES</string>
</resources>