<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:descendantFocusability="beforeDescendants"
	android:focusable="true"
	android:focusableInTouchMode="true"
	tools:context=".presentation.screen.registration.RegistrationActivity">

	<android.support.v4.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1">

		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">

			<android.support.design.widget.TextInputLayout
				android:id="@+id/inputLayoutRegistrationName"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/indentation_16"
				android:textColorHint="@color/text_color_secondary"
				app:hintTextAppearance="@style/StyleInputLayout">

				<android.support.design.widget.TextInputEditText
					android:id="@+id/editRegistrationName"
					style="@style/StyleEditText"
					android:hint="@string/txt_registration_hint_first_name"
					android:inputType="text" />
			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:id="@+id/inputLayoutRegistrationLastName"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/indentation_16"
				android:layout_marginStart="@dimen/indentation_16"
				android:textColorHint="@color/text_color_secondary"
				app:hintTextAppearance="@style/StyleInputLayout">

				<android.support.design.widget.TextInputEditText
					android:id="@+id/editRegistrationLastName"
					style="@style/StyleEditText"
					android:hint="@string/txt_registration_hint_last_name"
					android:inputType="text" />
			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:id="@+id/inputLayoutRegistrationEmail"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/indentation_16"
				android:textColorHint="@color/text_color_secondary"
				app:hintTextAppearance="@style/StyleInputLayout">

				<android.support.design.widget.TextInputEditText
					android:id="@+id/editRegistrationEmail"
					style="@style/StyleEditText"
					android:hint="@string/txt_registration_hint_email"
					android:inputType="textEmailAddress" />
			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:id="@+id/inputLayoutRegistrationPassword"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/indentation_16"
				android:layout_marginEnd="@dimen/indentation_16"
				android:textColorHint="@color/text_color_secondary"
				app:hintTextAppearance="@style/StyleInputLayout"
				app:passwordToggleEnabled="true">

				<android.support.design.widget.TextInputEditText
					android:id="@+id/editRegistrationPassword"
					style="@style/StyleEditText"
					android:inputType="textPassword"
					android:theme="@style/AppTheme.ThemeEditTextAppearance"
					android:hint="@string/txt_registration_hint_create_password" />
			</android.support.design.widget.TextInputLayout>

			<TextView
				android:id="@+id/txtRegistrFourthHint"
				style="@style/TxtStyleSecondary"
				android:layout_marginStart="@dimen/indentation_20"
				android:text="@string/txt_registration_hint_valid_password"
				android:textColor="@color/grey"
				android:textSize="@dimen/text_size_12"/>

			<android.support.design.widget.TextInputLayout
				android:id="@+id/inputLayoutRegistrationCode"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/indentation_16"
				android:layout_marginStart="@dimen/indentation_16"
				android:layout_marginTop="@dimen/indentation_10"
				android:textColorHint="@color/text_color_secondary"
				app:hintTextAppearance="@style/StyleInputLayout">

				<android.support.design.widget.TextInputEditText
					android:id="@+id/editRegistrationCode"
					style="@style/StyleEditText"
					android:hint="@string/txt_registration_hint_code"
					android:inputType="text" />
			</android.support.design.widget.TextInputLayout>

		</LinearLayout>

			<include
				android:id="@+id/progressBarRegistration"
				layout="@layout/layout_progress_bar"/>

		</FrameLayout>

	</android.support.v4.widget.NestedScrollView>

	<Button
		android:id="@+id/btnNextRegistration"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/txt_registration_button"
		android:textSize="@dimen/text_size_14"
		android:textColor="@android:color/white"
		android:background="@drawable/button_selector"
		android:layout_gravity="bottom"
		app:layout_constraintBottom_toBottomOf="parent"
		android:enabled="false" />

</LinearLayout>