<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:focusable="true"
	android:focusableInTouchMode="true"
	android:orientation="vertical">

	<TextView
		android:id="@+id/txtTitleAuth"
		style="@style/TxtStyleTitle"
		android:textSize="@dimen/text_size_14"
		android:text="@string/txt_auth_screen_enter_your_password"
		android:layout_marginTop="@dimen/indentation_26"
		android:layout_marginStart="@dimen/indentation_16"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"/>

	<android.support.design.widget.TextInputLayout
		android:id="@+id/inputLayoutAuthPassword"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/indentation_16"
		android:textColorHint="@color/text_color_secondary"
		app:hintTextAppearance="@style/StyleInputLayout"
		app:passwordToggleEnabled="true"
		app:layout_constraintTop_toBottomOf="@id/txtTitleAuth"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/editAuthPassword"
			style="@style/StyleEditText"
			android:inputType="textPassword"
			android:theme="@style/AppTheme.ThemeEditTextAppearance"
			android:hint="@string/txt_auth_screen_hint_enter_password" />
	</android.support.design.widget.TextInputLayout>

	<TextView
		android:id="@+id/txtForgotPassword"
		style="@style/TxtStyleTitle"
		android:textSize="@dimen/text_size_14"
		android:textColor="@color/text_view_selectable_purple"
		android:text="@string/txt_auth_screen_forgot_the_password"
		android:layout_marginEnd="@dimen/indentation_16"
		android:layout_marginTop="@dimen/indentation_40"
		app:layout_constraintTop_toBottomOf="@id/inputLayoutAuthPassword"
		app:layout_constraintEnd_toEndOf="parent"/>

	<include
		android:id="@+id/progressBarAuth"
		layout="@layout/layout_progress_bar"/>

	<include
		android:id="@+id/btnAuthNext"
		layout="@layout/button_view_next"/>

</android.support.constraint.ConstraintLayout>